# steepest-ascent

./: CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt
app/src/: app.cpp
core/: CMakeLists.txt
core/include/common/: point.h  random.h  search_space.h
core/include/steepest-ascent/: parameter.h  parameter_defaults.h  smallest_boundary_polygon.h  steepest_ascent.h
core/src/steepest-ascent/: parameter.cpp  smallest_boundary_polygon.cpp  steepest_ascent.cpp
visualizer/: CMakeLists.txt
visualizer/include/visualizer/: visualizer.h
visualizer/src/visualizer/: visualizer.cpp
